style(java): apply backend formatter